@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1117</version>
+  <version>1118</version>
   <dependencies>
     <dependency>profile-collective.plonetruegallery:default</dependency>
     <dependency>profile-plone.app.jquery:default</dependency>
